Faq, About Us, Pre Loader

--- a/faq.html
+++ b/faq.html
@@ -62,57 +62,23 @@
                     <div class="d-flex menu-wrap">
                        <div id="mainmenu" class="mainmenu">
                            <ul class="nav">
-                               <li><a data-scroll class="nav-link active" href="index.html">Beranda<span class="sr-only">(current)</span></a> 
+                                <li>
+                                    <a data-scroll href="index.html">Beranda<span class="sr-only">(current)</span></a> 
+                                </li>
+                                <li>
+                                    <a href="about-us.html">Tentang Kami</a> 
+                                </li>
+                                <li><a href="#">Produk <i class="fa fa-caret-square-down"></i></a> 
                                     <ul>
-                                       <li><a href="index.html">Beranda Design Studio</a></li>
-                                       <li><a href="index-2.html">Home Web hosting</a></li>
-                                       <li><a href="index-3.html">Home Support Desk</a></li>
-                                       <li><a href="index-4.html">Home Apps Landing</a></li>
-                                       <li><a href="index-5.html">Home Cloud Based Saas</a></li>
+                                       <li>
+                                            <a href="services-1.html"><img src="img/icon/smartphone.png" height="50" width="50" alt=""> Aplikasi</a>
+                                        </li>
+                                       <li><a href="services-2.html"><img src="img/icon/kit.png" height="50" width="50" sizes="cover" alt=""> Kit Edukasi</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="#">About</a> 
-                                    <ul>
-                                       <li><a href="about-us.html">About Us</a></li>
-                                       <li><a href="about-company.html">About Company</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="#">Services</a> 
-                                    <ul>
-                                       <li><a href="services-1.html">Aplikasi</a></li>
-                                       <li><a href="services-2.html">Kit Edukasi</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="#">Case Studies</a> 
-                                    <ul>
-                                       <li><a href="case-studies.html">Case Studies</a></li>
-                                       <li><a href="case-details.html">Case Studies Single</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="#">Pages</a> 
-                                    <ul>
-                                       <li><a href="job-listing.html">Job Listing</a></li>
-                                       <li><a href="job-details.html">Job Details</a></li>
-                                       <li><a href="team.html">Our Team</a></li>
-                                       <li><a href="pricing-plans.html">Pricing Plans</a></li>
-                                       <li><a href="login.html">Login</a></li>
-                                       <li><a href="register.html">Register</a></li>
-                                       <li><a href="faq.html">FAQ's</a></li>
-                                       <li><a href="404.html">404 Error</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="#">Blog</a> 
-                                    <ul>
-                                       <li><a href="blog-grid.html">Blog Grid</a></li>
-                                       <li><a href="blog-classic.html">Blog Classic</a></li>
-                                       <li><a href="blog-single.html">Blog Single</a></li>
-                                    </ul>
-                                </li>
+                                <li><a class="nav-link active" href="faq.html">FAQ's</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
-                       </div>
-                       <div class="header-right">
-                           <div class="cart-icon"><i class="fa fa-shopping-basket"></i><span class="count">0</span></div>
                        </div>
                     </div>
                 </nav>
@@ -146,12 +112,12 @@
                                 <div class="card-header">
                                     <h5 class="mb-0">
                                         <button class="btn btn-link" data-toggle="collapse" data-target="#faq1" aria-expanded="true" aria-controls="faq1">
-                                          What's the difference between 32-bit and 64-bit Windows?
+                                            Apa itu Etnochem?
                                         </button>
                                     </h5>
                                 </div>
                                 <div id="faq1" class="collapse show" aria-labelledby="faq1" data-parent="#accordion">
-                                    <div class="card-body">We provide marketing services to startups and small businesses to looking for a partner of their digital media, design & development, lead generation and communications requirents.
+                                    <div class="card-body">Etnochem adalah inovasi kit edukasi yang menggabungkan ilmu kimia, teknologi, seni, dan budaya dalam pembelajaran asam basa. Kami memberikan pengalaman belajar yang unik dan menarik dengan fokus pada pembuatan batik khas Malang, yaitu batik Malangan, menggunakan bahan pewarna alami.
                                     </div>
                                 </div>
                             </div>
@@ -159,12 +125,12 @@
                                 <div class="card-header">
                                     <h5 class="mb-0">
                                         <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#faq2" aria-expanded="false" aria-controls="faq2">
-                                          My Windows 10 product key won't verify. What's the problem?
+                                            Apa yang membedakan Etnochem dari metode pembelajaran lainnya?
                                         </button>
                                     </h5>
                                 </div>
                                 <div id="faq2" class="collapse" aria-labelledby="faq2" data-parent="#accordion">
-                                    <div class="card-body">We provide marketing services to startups and small businesses to looking for a partner of their digital media, design & development, lead generation and communications requirents.
+                                    <div class="card-body">Etnochem membedakan diri dengan mengintegrasikan ilmu kimia dengan seni batik tradisional, menciptakan pendekatan pembelajaran STEAM-2C yang holistik dan kreatif. Ini menghasilkan pemahaman yang lebih dalam tentang konsep kimia asam basa sambil menghargai budaya lokal.
                                     </div>
                                 </div>
                             </div>
@@ -172,12 +138,12 @@
                                 <div class="card-header">
                                     <h5 class="mb-0">
                                         <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#faq3" aria-expanded="false" aria-controls="faq3">
-                                          How do I tell if my computer can run a 64-bit Windows?
+                                            Apa itu pendekatan STEAM-2C?
                                         </button>
                                     </h5>
                                 </div>
                                 <div id="faq3" class="collapse" aria-labelledby="faq3" data-parent="#accordion">
-                                    <div class="card-body">We provide marketing services to startups and small businesses to looking for a partner of their digital media, design & development, lead generation and communications requirents.
+                                    <div class="card-body">STEAM-2C adalah pendekatan pembelajaran yang menggabungkan Science (Sains), Technology (Teknologi), Engineering (Rekayasa), Arts (Seni), Mathematics (Matematika), Culture (Budaya), dan Communication (Komunikasi). Ini adalah pendekatan yang komprehensif yang menghubungkan berbagai disiplin ilmu dalam konteks pembelajaran.
                                     </div>
                                 </div>
                            </div>
@@ -189,12 +155,12 @@
                                 <div class="card-header">
                                     <h5 class="mb-0">
                                         <button class="btn btn-link" data-toggle="collapse" data-target="#faq4" aria-expanded="true" aria-controls="faq4">
-                                          What's the difference between 32-bit and 64-bit Windows?
+                                            Apakah Etnochem cocok untuk semua tingkat usia?
                                         </button>
                                     </h5>
                                 </div>
                                 <div id="faq4" class="collapse show" aria-labelledby="faq4" data-parent="#accordion2">
-                                    <div class="card-body">We provide marketing services to startups and small businesses to looking for a partner of their digital media, design & development, lead generation and communications requirents.
+                                    <div class="card-body">Etnochem dirancang untuk berbagai tingkat usia, mulai dari siswa sekolah dasar hingga tingkat perguruan tinggi. Kami memiliki sumber daya yang dapat disesuaikan dengan tingkat pemahaman dan keterampilan yang berbeda.
                                     </div>
                                 </div>
                             </div>
@@ -202,12 +168,12 @@
                                 <div class="card-header">
                                     <h5 class="mb-0">
                                         <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#faq5" aria-expanded="false" aria-controls="faq5">
-                                          My Windows 10 product key won't verify. What's the problem?
+                                            Bagaimana saya dapat membeli Etnochem Kit?
                                         </button>
                                     </h5>
                                 </div>
                                 <div id="faq5" class="collapse" aria-labelledby="faq5" data-parent="#accordion2">
-                                    <div class="card-body">We provide marketing services to startups and small businesses to looking for a partner of their digital media, design & development, lead generation and communications requirents.
+                                    <div class="card-body">Anda dapat membeli Etnochem Kit melalui platform e-commerce kami yang terintegrasi. Silakan kunjungi link ke platform e-commerce kami untuk melihat katalog produk dan proses pembelian.
                                     </div>
                                 </div>
                             </div>
@@ -215,12 +181,12 @@
                                 <div class="card-header">
                                     <h5 class="mb-0">
                                         <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#faq6" aria-expanded="false" aria-controls="faq6">
-                                          How do I tell if my computer can run a 64-bit Windows?
+                                            Apakah ada dukungan atau panduan yang disertakan dalam Etnochem Kit?
                                         </button>
                                     </h5>
                                 </div>
                                 <div id="faq6" class="collapse" aria-labelledby="faq3" data-parent="#accordion2">
-                                    <div class="card-body">We provide marketing services to startups and small businesses to looking for a partner of their digital media, design & development, lead generation and communications requirents.
+                                    <div class="card-body">Ya, setiap Etnochem Kit disertai dengan buku panduan lengkap yang memandu Anda melalui seluruh proses pembuatan batik Malangan menggunakan bahan pewarna alami. Selain itu, kami juga menyediakan panduan online dan dukungan melalui aplikasi kami.
                                     </div>
                                 </div>
                            </div>
@@ -232,12 +198,12 @@
                                 <div class="card-header">
                                     <h5 class="mb-0">
                                         <button class="btn btn-link" data-toggle="collapse" data-target="#faq7" aria-expanded="true" aria-controls="faq7">
-                                          What's the difference between 32-bit and 64-bit Windows?
+                                            Bagaimana teknologi Augmented Reality (AR) digunakan dalam Etnochem?
                                         </button>
                                     </h5>
                                 </div>
                                 <div id="faq7" class="collapse show" aria-labelledby="faq7" data-parent="#accordion3">
-                                    <div class="card-body">We provide marketing services to startups and small businesses to looking for a partner of their digital media, design & development, lead generation and communications requirents.
+                                    <div class="card-body">Teknologi AR digunakan untuk memvisualisasikan reaksi kimia dalam pembuatan batik secara nyata. Anda dapat melihat bagaimana pewarna alami bereaksi dalam proses batik menggunakan aplikasi pendukung yang kami sediakan.
                                     </div>
                                 </div>
                             </div>
@@ -245,12 +211,12 @@
                                 <div class="card-header">
                                     <h5 class="mb-0">
                                         <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#faq8" aria-expanded="false" aria-controls="faq8">
-                                          My Windows 10 product key won't verify. What's the problem?
+                                            Apakah Etnochem tersedia untuk pengiriman internasional?
                                         </button>
                                     </h5>
                                 </div>
                                 <div id="faq8" class="collapse" aria-labelledby="faq8" data-parent="#accordion3">
-                                    <div class="card-body">We provide marketing services to startups and small businesses to looking for a partner of their digital media, design & development, lead generation and communications requirents.
+                                    <div class="card-body">Ya, kami menyediakan pengiriman internasional untuk Etnochem Kit. Silakan hubungi layanan pelanggan kami untuk informasi lebih lanjut tentang pengiriman internasional.
                                     </div>
                                 </div>
                             </div>
@@ -258,18 +224,18 @@
                                 <div class="card-header">
                                     <h5 class="mb-0">
                                         <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#faq9" aria-expanded="false" aria-controls="faq9">
-                                          How do I tell if my computer can run a 64-bit Windows?
+                                            Bagaimana saya dapat menghubungi tim Etnochem untuk pertanyaan lebih lanjut?
                                         </button>
                                     </h5>
                                 </div>
                                 <div id="faq9" class="collapse" aria-labelledby="faq9" data-parent="#accordion3">
-                                    <div class="card-body">We provide marketing services to startups and small businesses to looking for a partner of their digital media, design & development, lead generation and communications requirents.
+                                    <div class="card-body">Anda dapat menghubungi tim dukungan pelanggan kami melalui halaman kontak kami atau melalui alamat email support@etnochem.com. Kami siap membantu Anda dengan segala pertanyaan atau permintaan bantuan yang Anda miliki.
                                     </div>
                                 </div>
                            </div>
                         </div>
                     </div><!--/. faq-item -->
-                    <div class="col-md-6 padding-15">
+                    <!-- <div class="col-md-6 padding-15">
                         <div id="accordion4" class="faq-item">
                             <div class="card">
                                 <div class="card-header">
@@ -311,7 +277,8 @@
                                 </div>
                            </div>
                         </div>
-                    </div><!--/. faq-item -->
+                    </div> -->
+                    <!--/. faq-item -->
                 </div>
             </div>
         </section><!--/. faq-section -->
