--- a/services-1.html
+++ b/services-1.html
@@ -62,22 +62,13 @@
                     <div class="d-flex menu-wrap">
                        <div id="mainmenu" class="mainmenu">
                            <ul class="nav">
-                               <li><a data-scroll class="nav-link active" href="index.html">Beranda<span class="sr-only">(current)</span></a> 
-                                    <ul>
-                                       <li><a href="index.html">Beranda Design Studio</a></li>
-                                       <li><a href="index-2.html">Home Web hosting</a></li>
-                                       <li><a href="index-3.html">Home Support Desk</a></li>
-                                       <li><a href="index-4.html">Home Apps Landing</a></li>
-                                       <li><a href="index-5.html">Home Cloud Based Saas</a></li>
-                                    </ul>
+                                <li>
+                                    <a data-scroll href="index.html">Beranda<span class="sr-only">(current)</span></a> 
                                 </li>
-                                <li><a href="#">About</a> 
-                                    <ul>
-                                       <li><a href="about-us.html">About Us</a></li>
-                                       <li><a href="about-company.html">About Company</a></li>
-                                    </ul>
+                                <li>
+                                    <a href="about-us.html">Tentang Kami</a> 
                                 </li>
-                                <li><a href="#">Produk</a> 
+                                <li><a href="#" class="nav-link active">Produk <i class="fa fa-caret-square-down"></i></a> 
                                     <ul>
                                        <li>
                                             <a href="services-1.html"><img src="img/icon/smartphone.png" height="50" width="50" alt=""> Aplikasi</a>
@@ -85,36 +76,9 @@
                                        <li><a href="services-2.html"><img src="img/icon/kit.png" height="50" width="50" sizes="cover" alt=""> Kit Edukasi</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="#">Case Studies</a> 
-                                    <ul>
-                                       <li><a href="case-studies.html">Case Studies</a></li>
-                                       <li><a href="case-details.html">Case Studies Single</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="#">Pages</a> 
-                                    <ul>
-                                       <li><a href="job-listing.html">Job Listing</a></li>
-                                       <li><a href="job-details.html">Job Details</a></li>
-                                       <li><a href="team.html">Our Team</a></li>
-                                       <li><a href="pricing-plans.html">Pricing Plans</a></li>
-                                       <li><a href="login.html">Login</a></li>
-                                       <li><a href="register.html">Register</a></li>
-                                       <li><a href="faq.html">FAQ's</a></li>
-                                       <li><a href="404.html">404 Error</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="#">Blog</a> 
-                                    <ul>
-                                       <li><a href="blog-grid.html">Blog Grid</a></li>
-                                       <li><a href="blog-classic.html">Blog Classic</a></li>
-                                       <li><a href="blog-single.html">Blog Single</a></li>
-                                    </ul>
-                                </li>
+                                <li><a href="faq.html">FAQ's</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
-                       </div>
-                       <div class="header-right">
-                           <div class="cart-icon"><i class="fa fa-shopping-basket"></i><span class="count">0</span></div>
                        </div>
                     </div>
                 </nav>
