--- a/services-1.html
+++ b/services-1.html
@@ -111,23 +111,7 @@
                 <rect x="-1136" y="-829.4" class="st1" width="2446" height="380"></rect>
             </svg>
         </section><!--/.hero-section-->
-        <!-- <section class="page-header padding">
-            <div class="anim-elements">
-                <div class="anim-element"></div>
-                <div class="anim-element"></div>
-                <div class="anim-element"></div>
-                <div class="anim-element"></div>
-                <div class="anim-element"></div>
-            </div>
-		    <div class="container">
-		        <div class="page-content text-center">
-                    <h4>Our Services</h4>
-		            <h2>Designed For Developers<br>Built For Business.</h2>
-		            <p>Multipurpose Saas Startup HTML Template.</p>
-		        </div>
-		    </div>
-		</section> -->
-        <!--/. page-header -->
+
         <section class="content-section bd-bottom padding pos-rel">
             <div class="anim-elements">
                 <div class="anim-element"></div>
@@ -143,22 +127,21 @@
                     </div>
                     <div class="col-lg-6 sm-padding">
                         <div class="content-info wow fadeInRight" data-wow-delay="300ms">
-                            <span>Aplikasi Etnochem</span>
-                            <h2>Track Productivity &amp; Keep Your Projects On The Budget!</h2>
-                            <p>We provide marketing services to startups and small businesses to looking for a partner of their digital media, design &amp; development, lead generation and communications requirents.</p>
+                            <h2>Aplikasi Etnochem</h2>
+                            <p class="text-justify">Aplikasi Etnochem adalah pendukung penting dalam pembelajaran yang didalamnya mendukung pembelajaran dalam kelas melalui fitur yang tersedia. Ini adalah aplikasi yang dapat diunduh di smartphone Anda untuk memvisualisasikan reaksi kimia dalam pembuatan batik. </p>
                             <ul class="content-feature">
                                 <li class="content-feature-item">
-                                    <i class="sb sb-network color-yellow"></i>
+                                    <img src="img/Keunggulan/augmented-reality.png" width="70">
                                     <div class="content-details">
-                                        <h3>Reporting & Analysis</h3>
-                                        <p>We provide marketing service to startups businesses to looking for a partner digital media.</p>
+                                        <h3>Scan-AR</h3>
+                                        <p>Teknologi inovatif yang digunakan dalam Etnochem untuk memvisualisasikan molekul 3D dan reaksi asam basa secara interaktif dan menarik</p>
                                     </div>
                                 </li>
                                 <li class="content-feature-item">
-                                    <i class="sb sb-target color-blue"></i>
+                                    <img src="img/Keunggulan/AI.png" width="70">
                                     <div class="content-details">
-                                        <h3>Technical SEO Audit</h3>
-                                        <p>We provide marketing service to startups businesses to looking for a partner digital media.</p>
+                                        <h3>Chem-AI</h3>
+                                        <p>Fitur ini memudahkan siswa dalam mencari informasi pengetahuan asam basa dan kearifan lokal batik secara efisien, dengan cara tanya jawab langsung dengan AI.</p>
                                     </div>
                                 </li>
                             </ul>
@@ -168,47 +151,56 @@
             </div>
         </section><!--/.content-section-->
         <section class="service-section padding">
-            <div class="container">
-                <div class="row service-wrap">
+            <div class="container text-center">
+                <h2>Semua Fitur</h2>
+                <span>ETNOCHEM Memiliki Banyak Fitur Unggulan</span>
+                <div class="row service-wrap justify-content-center">
                     <div class="col-lg-4 col-sm-6 padding-15">
                         <div class="service-item wow fadeInUp" data-wow-delay="200ms">
-                            <i class="ti-harddrives color-red"></i>
-                            <h3>Shared Hosting</h3>
-                            <p>We provide marketing services to startups and small businesses to looking for a partner of their digital media.</p>
+                            <img src="img/App/Koempetensi.png" width="100" height="100" alt="">
+                            <h3>Kompetensi</h3>
+                            <p>Berisi Capaian Pembelajaran (CP) dan Tujuan Pembelajaran (TP), agar siswa tahu capaian atau tujuan pembelajaran pada materi yang akan diajarkan.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 padding-15">
                         <div class="service-item wow fadeInUp" data-wow-delay="300ms">
-                            <i class="ti-layers-alt color-blue"></i>
-                            <h3>Web Hosting</h3>
-                            <p>We provide marketing services to startups and small businesses to looking for a partner of their digital media.</p>
+                            <img src="img/App/mind-map.png" width="100" height="100" alt="">
+                            <h3>Peta Konsep</h3>
+                            <p>Didalamnya terdapat gambaran besar materi yang akan dipelajari sehingga proses belajar akan jauh lebih bermakna</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 padding-15">
                         <div class="service-item wow fadeInUp" data-wow-delay="400ms">
-                            <i class="ti-cloud-up color-yellow"></i>
-                            <h3>Cloud Hosting</h3>
-                            <p>We provide marketing services to startups and small businesses to looking for a partner of their digital media.</p>
+                            <img src="img/App/knowledge.png" width="100" height="100" alt="">
+                            <h3>Ayo Berwawasan</h3>
+                            <p>Serangkaian video yang membuka pintu rahasia seni batik Malangan melalui seri menjelajahi seni batik Indonesia, mengungkap sejarah didalamnya.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 padding-15">
                         <div class="service-item wow fadeInUp" data-wow-delay="500ms">
-                            <i class="ti-folder color-green"></i>
-                            <h3>Data Management</h3>
-                            <p>We provide marketing services to startups and small businesses to looking for a partner of their digital media.</p>
+                            <img src="img/App/online-lesson.png" width="100" height="100" alt="">
+                            <h3>Ayo Belajar</h3>
+                            <p>Berisi banyak fitur-fitur lagi didalamnya yakni LKPD, Video Pembelajaran, Pre-Test & Post-Test, FlipBook ber-ISBN dan Permainan.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 padding-15">
                         <div class="service-item wow fadeInUp" data-wow-delay="600ms">
-                            <i class="ti-files color-orange"></i>
-                            <h3>Domain Sale</h3>
-                            <p>We provide marketing services to startups and small businesses to looking for a partner of their digital media.</p>
+                            <img src="img/App/AR.png" width="100" height="100" alt="">
+                            <h3>Scan AR</h3>
+                            <p>Teknologi inovatif yang digunakan dalam Etnochem untuk memvisualisasikan molekul 3D dan reaksi asam basa secara interaktif dan menarik.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 padding-15">
                         <div class="service-item wow fadeInUp" data-wow-delay="700ms">
-                            <i class="ti-shield color-purple"></i>
-                            <h3>Dedicated Hosting</h3>
+                            <img src="img/App/chatbot.png" width="100" height="100" alt="">
+                            <h3>Chem-AI</h3>
+                            <p>Fitur ini memudahkan siswa dalam mencari informasi pengetahuan asam basa dan kearifan lokal batik secara efisien, dengan cara tanya jawab langsung dengan AI.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 padding-15">
+                        <div class="service-item wow fadeInUp" data-wow-delay="700ms">
+                            <img src="img/App/group.png" width="100" height="100" alt="">
+                            <h3>Forum Diskusi</h3>
                             <p>We provide marketing services to startups and small businesses to looking for a partner of their digital media.</p>
                         </div>
                     </div>
