--- a/services-1.html
+++ b/services-1.html
@@ -210,7 +210,7 @@
         <section class="project-section bd-bottom padding">
             <div class="container">
                 <div class="section-heading text-center mb-40">
-                    <span>Fitur Aplikasi Kami</span>
+                    <span>Jelajahi ETNOCHEM App</span>
                     <h2>Screenshots Aplikasi</h2>
                 </div>
                 <div class="row">
@@ -226,7 +226,13 @@
                                 <img src="img/Screenshots app/mainmenu.png" alt="img">
                             </div>
                             <div class="project-item">
-                                <img src="img/Screenshots app/mainmenu.png" alt="img">
+                                <img src="img/Screenshots app/forum.png" alt="img">
+                            </div>
+                            <div class="project-item">
+                                <img src="img/Screenshots app/video.png" alt="img">
+                            </div>
+                            <div class="project-item">
+                                <img src="img/Screenshots app/ai.png" alt="img">
                             </div>
                         </div>
                     </div>
